# copilot-dashboard

./: .env.sample  README.md  docker-compose.yml  package.json  postgres-sakila-drop-objects.sql
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  logger.py  main.py
backend/app/agent/: .gitignore  __init__.py  configuration.py  graph.py  langgraph.json  prompts.py  state.py  tools.py  utils.py
backend/app/api/: insights.py  query.py
backend/app/db/: database.py  models.py
backend/app/utils/: helpers.py
backend/data/: README.txt
backend/data/postgres-copilot-db/: README.txt  postgres-sakila-delete-data.sql  postgres-sakila-schema.sql
backend/data/sqlite-sakila-db/: ReadME.txt  sqlite-sakila-delete-data.sql  sqlite-sakila-drop-objects.sql  sqlite-sakila-schema.sql
backend/scripts/: migrate_sakila.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock_old.yaml  wfcms-data.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: AssistantMessage.tsx  Dashboard.tsx
frontend/components/generative-ui/: SearchResults.tsx
frontend/components/ui/: area-chart.tsx  bar-chart.tsx  pie-chart.tsx
frontend/lib/: prompt.ts
