[project]
name = "insight-copilot"
version = "0.1.0"
description = "A modular, open-source Co-Pilot app built with LangGraph and CopilotKit"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "pandas>=1.3.0",
    "langchain>=0.0.200",
    "langgraph>=0.0.10",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py39"
